--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -27,11 +27,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.FORMULA_TOKEN }}
           REPO: ${{ github.repository }}
           FORMULA: plex.rb
-        run: |
+        run: |-
           curl -X POST \
-            -H 'Accept: application/vnd.github.v3+json' \
-            -H "Authorization: Bearer $GITHUB_TOKEN" \
-            -H 'Content-Type: application/json' \
-            -H 'X-GitHub-Api-Version: 2022-11-28' \
-            -d '{"ref":"main", inputs: {"repo": "$REPO", "formula": "$FORMULA"}}' \
-            https://api.github.com/repos/BalliAsghar/homebrew-apps/actions/workflows/57988397/dispatches
+          -H 'Accept: application/vnd.github.v3+json' \
+          -H "Authorization: Bearer $GITHUB_TOKEN" \
+          -H 'Content-Type: application/json' \
+          -H 'X-GitHub-Api-Version: 2022-11-28' \
+          -d '{"ref":"main", "inputs": {"repo": "'"$REPO"'", "formula": "'"$FORMULA"'"}}' \
+          https://api.github.com/repos/BalliAsghar/homebrew-apps/actions/workflows/57988397/dispatches
